--- a/Konyvtar/Server/Konyvtar.Server.csproj
+++ b/Konyvtar/Server/Konyvtar.Server.csproj
@@ -12,7 +12,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Client\Konyvtar.Client.csproj" />
-    <ProjectReference Include="..\Shared\Konyvtar.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 
