Könyvtáros felület, könyv hozzáadása, könyv kölcsönzése, fix '.' in class names

--- a/Konyvtar.Client/Properties/launchSettings.json
+++ b/Konyvtar.Client/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Konyvtar.Client": {
+    "KonyvtarClient": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
