--- a/Konyvtar.WEBAPI/Konyvtar.WEBAPI.csproj
+++ b/Konyvtar.WEBAPI/Konyvtar.WEBAPI.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Konyvtar.Contracts\Konyvtar.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
