--- a/Konyvtar.Contracts/Konyvtar.Contracts.csproj
+++ b/Konyvtar.Contracts/Konyvtar.Contracts.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" Version="3.0.3" />
+    <PackageReference Include="xunit.extensibility.execution" Version="2.4.2" />
+  </ItemGroup>
+
 </Project>
